# api-forge-template

./: Cargo.toml  README.md  cargo-generate.toml  rename.rhai
generator/: Cargo.toml
generator/src/: lib.rs  main.rs  marco.rs  payloads.rs
simple/: Cargo.toml
simple/src/: api.rs  errors.rs  lib.rs  options.rs
simple/src/restful/: client.rs  mod.rs  traits.rs
simple/src/websocket/: client.rs  command.rs  events.rs  mod.rs
