[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
graceful-futures.workspace = true
common.workspace = true
serde.workspace = true
serde_qs.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-test.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true

hyper = { version = "0.14.28", features = ["http1", "http2", "runtime", "client", "tcp"] }
hyper-rustls = { version = "0.23.2", features = ["http2"] }